# Equity-alpha-research

./: README.md  pyproject.toml  requirements.txt
data/universe/: example_universe_300.csv  example_universe_50.csv
src/equity_alpha/: __init__.py  backtest.py  data.py  features.py  metrics.py  portfolio.py  reporting.py  run_pipeline.py  signals.py
src/equity_alpha_research_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_pipeline.py
