[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "equity-alpha-research-pipeline"
version = "0.1.0"
description = "Reproducible cross-sectional equity alpha research and backtesting pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Taewoon Choi"}]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "yfinance>=0.2.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
